templater/tests/snapshots/error__debug_render_report__if_cond_type_mismatch_str.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected type boolean, got string
   ,----
 1 | {% if str %}x{% end %}
   :       ^^^
   `----
