templater/tests/snapshots/error__debug_render_report__index_access_on_non_list.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected type list, got string
   ,----
 1 | {{ str.0 }}
   :    ^^^
   `----
