templater/tests/snapshots/error__debug_render_report__integer_overflow.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x integer literal out of i64 range
   ,----
 1 | {{ 9223372036854775808 }}
   :    ^^^^^^^^^^^^^^^^^^^
   `----
