templater/tests/snapshots/error__debug_render_report__invalid_modifier_on_comment.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x invalid modifier
   ,----
 1 | {#- x #}
   :   ^
   `----
