templater/tests/snapshots/error__debug_render_report__keyword_as_identifier.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x `if` is a reserved keyword
   ,----
 1 | {{ if }}
   :    ^|
   :     `-- rename `if`
   `----
