templater/tests/snapshots/error__debug_render_report__list_index_out_of_bounds.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x list index 5 out of bounds (length 3)
   ,----
 1 | {{ list.5 }}
   :         ^
   `----
