templater/tests/snapshots/error__debug_render_report__map_key_not_found.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x map key `nope` not found
   ,----
 1 | {{ map.nope }}
   :        ^^^^
   `----
