templater/tests/snapshots/error__debug_render_report__missing_condition.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x missing condition
   ,----
 1 | {% if %}
   :      ^
   `----
