templater/tests/snapshots/error__debug_render_report__missing_in.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x missing `in` keyword
   ,----
 1 | {% for x %}
   :         ^
   `----
