templater/tests/snapshots/error__debug_render_report__missing_iterable.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x missing iterable
   ,----
 1 | {% for x in %}
   :            |
   :            `-- provide an iterable after `in`
   `----
