templater/tests/snapshots/error__debug_render_report__negative_list_index.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x negative list index -1
   ,----
 1 | {{ list.-1 }}
   :         ^^
   `----
