templater/tests/snapshots/error__debug_render_report__orphan_elif.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x `elif` outside of an `if` block
   ,----
 1 | {% elif x %}
   : ^^^^^^^^^^^^
   `----
